05-Ingress/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
#  type: NodePort
  selector:
    app: myhome
  ports:
    - port: 80
      targetPort: 8080
#     nodePort: 30005
