05-Ingress/ingress-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo

spec:
  rules:
    - host: app.172.16.16.111.nip.io
      http:
        paths:
          - path: /bar
            pathType: Exact
            backend:
              service:
                name: web
                port:
                  number: 80
          - path: /foo
            pathType: Exact
            backend:
              service:
                name:  web
                port:
                  number: 80
